frame-omni-bencher: enable  jemalloc-allocator (#11069)
Fix huge benchmark regression for storage-heavy extrinsics, enabling
jemalloc-allocator via polkadot-jemalloc-shim for omni-bencher, marked
as optional in the scope of PR #10590.

This close https://github.com/paritytech/trie/issues/230.

Thanks @alexggh and @cheme for the help :bow: 

Tested against `runtime / main` and
[2.1.0](https://github.com/polkadot-fellows/runtimes/pull/1065) as
described
[here](https://github.com/paritytech/trie/issues/230#issuecomment-3896270293).
For the `usual` exstrinsic `force_apply_min_commission` doing massive
storage allocation/deallocation on benchmark setup and then just 1read -
2 write in the benchmark extrinsic itself, times goes down from ms to
µs.

The regression was introduced by #10590 `sc-client-db: Make jemalloc
optional`

```bash
runtimes git:(sigurpol-release-2_0_6) /home/paolo/github/polkadot-sdk/target/release/frame-omni-bencher v1 benchmark pallet --runtime ./target/release/wbuild/asset-hub-polkadot-runtime/asset_hub_polkadot_runtime.compact.compressed.wasm --pallet pallet_staking_async --extrinsic "force_apply_min_commission" --steps 2 --repeat 1
2026-02-13T15:06:30.145367Z  INFO frame::benchmark::pallet: Initialized runtime log filter to 'INFO'
2026-02-13T15:06:31.784936Z  INFO pallet_collator_selection::pallet: assembling new collators for new session 0 at #0
2026-02-13T15:06:31.784966Z  INFO pallet_collator_selection::pallet: assembling new collators for new session 1 at #0
2026-02-13T15:08:29.701636Z  INFO frame::benchmark::pallet: [  0 % ] Starting benchmark: pallet_staking_async::force_apply_min_commission
2026-02-13T15:08:35.130403Z  INFO frame::benchmark::pallet: [  0 % ] Running  benchmark: pallet_staking_async::force_apply_min_commission (overtime)
Pallet: "pallet_staking_async", Extrinsic: "force_apply_min_commission", Lowest values: [], Highest values: [], Steps: 2, Repeat: 1
Raw Storage Info
========
Storage: `Staking::MinCommission` (r:1 w:0)
Proof

--- a/substrate/utils/frame/omni-bencher/Cargo.toml
+++ b/substrate/utils/frame/omni-bencher/Cargo.toml
@@ -15,10 +15,15 @@ workspace = true
 clap = { features = ["derive"], workspace = true }
 cumulus-primitives-proof-size-hostfunction = { workspace = true, default-features = true }
 frame-benchmarking-cli = { workspace = true }
+polkadot-jemalloc-shim = { workspace = true }
 sc-cli = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
 sp-statement-store = { workspace = true, default-features = true }
 tracing-subscriber = { workspace = true }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+# Jemalloc as global allocator prevents huge benchmark regression for storage-heavy extrinsics.
+polkadot-jemalloc-shim = { workspace = true, features = ["jemalloc-allocator"] }
 
 [dev-dependencies]
 assert_cmd = { workspace = true }
