--- a/.github/workflows/release-80_publish-crates.yml
+++ b/.github/workflows/release-80_publish-crates.yml
@@ -30,7 +30,14 @@ permissions:
   contents: write
 
 jobs:
+  check-synchronization:
+    uses: paritytech-release/sync-workflows/.github/workflows/check-synchronization.yml@main
+    secrets:
+      fork_writer_app_key: ${{ secrets.UPSTREAM_CONTENT_SYNC_APP_KEY }}
+
   set-image:
+    needs: [ check-synchronization ]
+    if: needs.check-synchronization.outputs.checks_passed == 'true'
     runs-on: ubuntu-latest
     outputs:
       IMAGE: ${{ steps.set_image.outputs.IMAGE }}
@@ -62,6 +69,7 @@ jobs:
 
       - name: Derive stable branch from release name
         id: derive_branch
+        shell: bash
         run: |
           RELEASE_NAME="${{ inputs.release_name }}"
           echo "Release name: $RELEASE_NAME"
@@ -105,6 +113,7 @@ jobs:
           git config --global user.signingKey "D8018FBB3F534D866A45998293C5FB5F6A367B51"
 
       - name: Create or switch to release branch
+        shell: bash
         run: |
           CRATES_RELEASE_BRANCH="${{ steps.derive_branch.outputs.CRATES_RELEASE_BRANCH }}"
 
@@ -118,6 +127,7 @@ jobs:
           echo "On branch $CRATES_RELEASE_BRANCH"
 
       - name: Install Rust 1.93
+        shell: bash
         run: |
           rustup install 1.93
           rustup default 1.93
@@ -131,7 +141,9 @@ jobs:
           cache-on-failure: true
 
       - name: Install parity-publish
-        run: cargo install parity-publish@0.10.6 --locked -q
+        run: |
+          apt-get update && apt-get install -y --no-install-recommends libcurl4-openssl-dev pkg-config
+          cargo install parity-publish@0.10.10 --locked -q
 
       - name: Run parity-publish plan
         run: |
@@ -152,6 +164,7 @@ jobs:
 
       - name: Parse crate names for release notes
         if: inputs.is_patch
+        shell: bash
         run: |
           RELEASE_NAME="${{ inputs.release_name }}"
 
@@ -213,6 +226,7 @@ jobs:
           echo "Successfully pushed $CRATES_RELEASE_BRANCH"
 
       - name: Configure cargo registry
+        shell: bash
         run: |
           REGISTRY="${{ inputs.registry }}"
           echo "Configuring cargo for $REGISTRY..."
@@ -231,6 +245,7 @@ jobs:
           cat ~/.cargo/config.toml || echo "(using defaults)"
 
       - name: Publish crates
+        shell: bash
         env:
           PARITY_PUBLISH_CRATESIO_TOKEN: ${{ inputs.registry == 'staging.crates.io' && secrets.STAGING_CRATES_IO_API_TOKEN || secrets.CRATES_IO_API_TOKEN }}
         run: |
